Added WebComic Images for phones and testing how good they look

--- a/webcomic/index.html
+++ b/webcomic/index.html
@@ -27,9 +27,12 @@
 
     <main role="main" id="page-main">
         <div id="webcomic-main">
-            <button id="bottomleft" onclick='PrevPage()'>Back</button>
+            <a id="bottomleft" onclick='PrevPage()'>&#10094;</a>
             <img id="centerpage" src="../rat_img/Cover.jpg">
-            <button id="bottomright" onclick='NextPage()'>Next</button>
+            <a id="bottomright" onclick='NextPage()'>&#10095;</a>
+            <a id="phoneleft" onclick='PhonePrevPage()'>&#10094;</a>
+            <img id="phonepage" src="../phone_img/Cover.jpg">
+            <a id="phoneright" onclick='PhoneNextPage()'>&#10095;</a>
         </div>
     </main>
 
