Fixed HTML Tags and Icon

--- a/contact/index.html
+++ b/contact/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Kaitlin Conard illustration.">
   <link rel="stylesheet" type="text/css" href="/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen">
-  <link rel="icon" href="/kkfavicon.ico">
+  <link rel="icon" href="../kkfavicon.ico">
   <title> Contact Info | Kaitlin Conard </title>
   <script src="/scripts/webcomponents-lite.min.js"></script>
   <script src="/scripts/changestar.js"></script>
@@ -45,7 +45,6 @@
         </a></li>
       </ul>   
     </div>
-  </div>
 </main>
 
 <footer role="contentinfo">
