--- a/webcomic/index.html
+++ b/webcomic/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/webcomic.css">
-    <link rel="icon" href="kkfavicon.ico">
+    <link rel="icon" href="../kkfavicon.ico">
     <title> Kaitlin Conard Art</title>
     <script src="/scripts/webcomponents-lite.min.js"></script>
     <script src="/scripts/changestar.js"></script>
