--- a/contact/index.html
+++ b/contact/index.html
@@ -30,7 +30,7 @@
       </ul>
       <h2> About </h2>
     <p>
-        Hello! My name is Kaitlin Conard and I’m an artist! I love to draw cute little adorable things all day. I’m from the beautiful city of Rochester, Minnesota. I graduated with a bachelor in illustrations from BYU Idaho.  I would love to have an opportunity to work in children’s illustration and/or character design.  Art is my love and passion in life, but when I’m not drawing you can catch me watching some of my favorite animated movies or kicking some butt as Lucas on Smash Brothers.  Needless to say, if you find yourself searching for a talented artist, I’m your gal.   
+        Hello! My name is Kaitlin McNeil and I’m an artist! I love to draw cute little adorable things all day. I’m from the beautiful city of Rochester, Minnesota. I graduated with a bachelor in illustrations from BYU Idaho.  I would love to have an opportunity to work in children’s illustration and/or character design.  Art is my love and passion in life, but when I’m not drawing you can catch me watching some of my favorite animated movies or kicking some butt as Lucas on Smash Brothers.  Needless to say, if you find yourself searching for a talented artist, I’m your gal.   
     </p>  
     <h2> Other Links </h2>
     <ul>
