--- a/illustrations/index.html
+++ b/illustrations/index.html
@@ -14,7 +14,7 @@
     <title> Kaitlin Conard Art</title>
     <script src="/scripts/webcomponents-lite.min.js"></script>
     <script src="/scripts/changestar.js"></script>
-    <script src="/scripts/lightbox.js"></script>
+    <script src="/scripts/lightbox.js?v=2"></script>
     <link rel="import" href="/static.html">
 
 </head>
@@ -27,50 +27,59 @@
     <nav role="navigation" id="page-nav">
     </nav>
     <div class="row">
-        <div class="column">
-            <img src="/image/aba_sm.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+		<div class="column">
+            <img src="/image/acidocean_sm.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+        </div>
+		<div class="column">
+            <img src="/image/wolffood_sm.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+        </div>
+		<div class="column">
+            <img src="/image/zira_sm.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/bbyMarty_sm.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+            <img src="/image/aba_sm.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/bow_sm.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
+            <img src="/image/bbyMarty_sm.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/cranes1_sm.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+            <img src="/image/bow_sm.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/cranes2_sm.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
+            <img src="/image/cranes1_sm.jpg" onclick="openModal();currentSlide(7)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/cranes3_sm.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
+            <img src="/image/cranes2_sm.jpg" onclick="openModal();currentSlide(8)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/daniel_sm.jpg" onclick="openModal();currentSlide(7)" class="hover-shadow">
+            <img src="/image/cranes3_sm.jpg" onclick="openModal();currentSlide(9)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/death_sm.jpg" onclick="openModal();currentSlide(8)" class="hover-shadow">
+            <img src="/image/daniel_sm.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/flyingCorgi_sm.jpg" onclick="openModal();currentSlide(9)" class="hover-shadow">
+            <img src="/image/death_sm.jpg" onclick="openModal();currentSlide(11)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/flyingKoi_sm.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow">
+            <img src="/image/flyingCorgi_sm.jpg" onclick="openModal();currentSlide(12)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/teaTime_sm.jpg" onclick="openModal();currentSlide(11)" class="hover-shadow">
+            <img src="/image/flyingKoi_sm.jpg" onclick="openModal();currentSlide(13)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/london_sm.jpg" onclick="openModal();currentSlide(12)" class="hover-shadow">
+            <img src="/image/teaTime_sm.jpg" onclick="openModal();currentSlide(14)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/cool_sm.jpg" onclick="openModal();currentSlide(13)" class="hover-shadow">
+            <img src="/image/london_sm.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/warm_sm.jpg" onclick="openModal();currentSlide(14)" class="hover-shadow">
+            <img src="/image/cool_sm.jpg" onclick="openModal();currentSlide(16)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/spring_sm.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow">
+            <img src="/image/warm_sm.jpg" onclick="openModal();currentSlide(17)" class="hover-shadow">
+        </div>
+        <div class="column">
+            <img src="/image/spring_sm.jpg" onclick="openModal();currentSlide(18)" class="hover-shadow">
         </div>
     </div>
 
@@ -82,64 +91,76 @@
                 <p id="caption"></p>
             </div>
 
-            <div class="mySlides">
-                <img class="Test" src="/image/aba_lg.jpg" alt="1 / 15">
+			<div class="mySlides">
+                <img class="Test" src="/image/acidocean_lg.png" alt="1 / 18">
+            </div>
+
+			<div class="mySlides">
+                <img class="Test" src="/image/wolffood_lg.png" alt="2 / 18">
+            </div>
+
+			<div class="mySlides">
+                <img class="Test" src="/image/zira_lg.png" alt="3 / 18">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/bbyMarty_lg.jpg" alt="2 / 15">
+                <img class="Test" src="/image/aba_lg.jpg" alt="4 / 18">
+            </div>
+
+            <div class="mySlides">
+                <img class="Test" src="/image/bbyMarty_lg.jpg" alt="5 / 18">
             </div>
 
             <div id="tallimg" class="mySlides">
-                <img class="Test" src="/image/bow_lg.jpg" alt="3 / 15">
+                <img class="Test" src="/image/bow_lg.jpg" alt="6 / 18">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/cranes1_lg.jpg" alt="4 / 15">
+                <img class="Test" src="/image/cranes1_lg.jpg" alt="7 / 18">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/cranes2_lg.jpg" alt="5 / 15">
+                <img class="Test" src="/image/cranes2_lg.jpg" alt="8 / 18">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/cranes3_lg.jpg" alt="6 / 15">
+                <img class="Test" src="/image/cranes3_lg.jpg" alt="9 / 18">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/daniel_lg.jpg" alt="7 / 15">
+                <img class="Test" src="/image/daniel_lg.jpg" alt="10 / 18">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/death_lg.jpg" alt="8 / 15">
+                <img class="Test" src="/image/death_lg.jpg" alt="11 / 18">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/flyingCorgi_lg.jpg" alt="9 / 15">
+                <img class="Test" src="/image/flyingCorgi_lg.jpg" alt="12 / 18">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/Koi_lg.jpg" alt="10 / 15">
+                <img class="Test" src="/image/Koi_lg.jpg" alt="13 / 18">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/teaTime_lg.jpg" alt="11 / 15">
+                <img class="Test" src="/image/teaTime_lg.jpg" alt="14 / 18">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/london_lg.jpg" alt="12 / 15">
+                <img class="Test" src="/image/london_lg.jpg" alt="15 / 18">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/cool_lg.jpg" alt="13 / 15">
+                <img class="Test" src="/image/cool_lg.jpg" alt="16 / 18">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/warm_lg.jpg" alt="14 / 15">
+                <img class="Test" src="/image/warm_lg.jpg" alt="17 / 18">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/spring_lg.jpg" alt="15 / 15">
+                <img class="Test" src="/image/spring_lg.jpg" alt="18 / 18">
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
