--- a/static.html
+++ b/static.html
@@ -17,18 +17,22 @@
 </div>
   
 <div id="footermodule">
-        <div id="links"><a href="https://www.facebook.com/kaitlin.conard?fref=ts" target="_blank" title="Facebook">
-      <img src="/link_img/FB.png" width="10%">
-    </a>
-    <a href="http://kaitlin-beer.tumblr.com" target="_blank" title="Tumblr">
-      <img src="/link_img/tumblr.png" width="10%">
-    </a>
-    <a href="http://trueblue-lua.deviantart.com/" target="_blank" title="Deviant Art">
-      <img src="/link_img/deviant.png" width="10%">
-    </a>
+    <div id="links">
+		<!-- <a href="https://www.facebook.com/kaitlin.conard?fref=ts" target="_blank" title="Facebook">
+    	  <img src="/link_img/FB.png" width="10%">
+    	</a>
+    	<a href="http://kaitlin-beer.tumblr.com" target="_blank" title="Tumblr">
+    	  <img src="/link_img/tumblr.png" width="10%">
+    	</a> -->
+    	<a href="https://trueblue-lua.deviantart.com/" target="_blank" title="Deviant Art">
+    	  <img src="/link_img/deviant.png" width="25%">
+    	</a>
+		<a href="https://instagram.com/truebluelua" target="_blank" title="Instagram">
+			<img src="/link_img/insta.png" width="25%">
+		  </a>
     </div>
- <ul>
-   <li> &COPY; Copyright 2013, <a href="/contact">Kaitlin Conard</a> </li>
-   <li> Site Design <a href="/contact"> Kaitlin Conard </a> Web Design Bryan Mcneil</li>
- </ul>
+ 	<ul>
+ 	  <li> &COPY; Copyright 2013, <a href="/contact">Kaitlin Conard</a> </li>
+ 	  <li> Site Design <a href="/contact"> Kaitlin Conard </a> Web Design Bryan Mcneil</li>
+ 	</ul>
 </div>
