Adding compressed images

--- a/illustrations/index.html
+++ b/illustrations/index.html
@@ -36,50 +36,53 @@
 		<div class="column">
             <img src="/image/zira_sm.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
         </div>
-        <div class="column">
-            <img src="/image/aba_sm.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+		<div class="column">
+            <img src="/image/Deimos_sm.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/bbyMarty_sm.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
+            <img src="/image/aba_sm.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/bow_sm.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
+            <img src="/image/bbyMarty_sm.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/cranes1_sm.jpg" onclick="openModal();currentSlide(7)" class="hover-shadow">
+            <img src="/image/bow_sm.jpg" onclick="openModal();currentSlide(7)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/cranes2_sm.jpg" onclick="openModal();currentSlide(8)" class="hover-shadow">
+            <img src="/image/cranes1_sm.jpg" onclick="openModal();currentSlide(8)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/cranes3_sm.jpg" onclick="openModal();currentSlide(9)" class="hover-shadow">
+            <img src="/image/cranes2_sm.jpg" onclick="openModal();currentSlide(9)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/daniel_sm.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow">
+            <img src="/image/cranes3_sm.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/death_sm.jpg" onclick="openModal();currentSlide(11)" class="hover-shadow">
+            <img src="/image/daniel_sm.jpg" onclick="openModal();currentSlide(11)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/flyingCorgi_sm.jpg" onclick="openModal();currentSlide(12)" class="hover-shadow">
+            <img src="/image/death_sm.jpg" onclick="openModal();currentSlide(12)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/flyingKoi_sm.jpg" onclick="openModal();currentSlide(13)" class="hover-shadow">
+            <img src="/image/flyingCorgi_sm.jpg" onclick="openModal();currentSlide(13)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/teaTime_sm.jpg" onclick="openModal();currentSlide(14)" class="hover-shadow">
+            <img src="/image/flyingKoi_sm.jpg" onclick="openModal();currentSlide(14)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/london_sm.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow">
+            <img src="/image/teaTime_sm.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/cool_sm.jpg" onclick="openModal();currentSlide(16)" class="hover-shadow">
+            <img src="/image/london_sm.jpg" onclick="openModal();currentSlide(16)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/warm_sm.jpg" onclick="openModal();currentSlide(17)" class="hover-shadow">
+            <img src="/image/cool_sm.jpg" onclick="openModal();currentSlide(17)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="/image/spring_sm.jpg" onclick="openModal();currentSlide(18)" class="hover-shadow">
+            <img src="/image/warm_sm.jpg" onclick="openModal();currentSlide(18)" class="hover-shadow">
+        </div>
+        <div class="column">
+            <img src="/image/spring_sm.jpg" onclick="openModal();currentSlide(19)" class="hover-shadow">
         </div>
     </div>
 
@@ -92,75 +95,79 @@
             </div>
 
 			<div class="mySlides">
-                <img class="Test" src="/image/acidocean_lg.png" alt="1 / 18">
+                <img class="Test" src="/image/acidocean_lg.jpg" alt="1 / 19">
             </div>
 
 			<div class="mySlides">
-                <img class="Test" src="/image/wolffood_lg.png" alt="2 / 18">
+                <img class="Test" src="/image/wolffood_lg.jpg" alt="2 / 19">
             </div>
 
 			<div class="mySlides">
-                <img class="Test" src="/image/zira_lg.png" alt="3 / 18">
+                <img class="Test" src="/image/zira_lg.jpg" alt="3 / 19">
+            </div>
+
+			<div class="mySlides">
+                <img class="Test" src="/image/Deimos_lg.jpg" alt="4 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/aba_lg.jpg" alt="4 / 18">
+                <img class="Test" src="/image/aba_lg.jpg" alt="5 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/bbyMarty_lg.jpg" alt="5 / 18">
+                <img class="Test" src="/image/bbyMarty_lg.jpg" alt="6 / 19">
             </div>
 
             <div id="tallimg" class="mySlides">
-                <img class="Test" src="/image/bow_lg.jpg" alt="6 / 18">
+                <img class="Test" src="/image/bow_lg.jpg" alt="7 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/cranes1_lg.jpg" alt="7 / 18">
+                <img class="Test" src="/image/cranes1_lg.jpg" alt="8 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/cranes2_lg.jpg" alt="8 / 18">
+                <img class="Test" src="/image/cranes2_lg.jpg" alt="9 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/cranes3_lg.jpg" alt="9 / 18">
+                <img class="Test" src="/image/cranes3_lg.jpg" alt="10 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/daniel_lg.jpg" alt="10 / 18">
+                <img class="Test" src="/image/daniel_lg.jpg" alt="11 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/death_lg.jpg" alt="11 / 18">
+                <img class="Test" src="/image/death_lg.jpg" alt="12 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/flyingCorgi_lg.jpg" alt="12 / 18">
+                <img class="Test" src="/image/flyingCorgi_lg.jpg" alt="13 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/Koi_lg.jpg" alt="13 / 18">
+                <img class="Test" src="/image/Koi_lg.jpg" alt="14 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/teaTime_lg.jpg" alt="14 / 18">
+                <img class="Test" src="/image/teaTime_lg.jpg" alt="15 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/london_lg.jpg" alt="15 / 18">
+                <img class="Test" src="/image/london_lg.jpg" alt="16 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/cool_lg.jpg" alt="16 / 18">
+                <img class="Test" src="/image/cool_lg.jpg" alt="17 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/warm_lg.jpg" alt="17 / 18">
+                <img class="Test" src="/image/warm_lg.jpg" alt="18 / 19">
             </div>
 
             <div class="mySlides">
-                <img class="Test" src="/image/spring_lg.jpg" alt="18 / 18">
+                <img class="Test" src="/image/spring_lg.jpg" alt="19 / 19">
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
