--- a/sketches/index.html
+++ b/sketches/index.html
@@ -13,7 +13,7 @@
   <title> Kaitlin Conard Art</title>
   <script src="/scripts/webcomponents-lite.min.js"></script>
   <script src="/scripts/changestar.js"></script>
-  <script src="/scripts/lightbox.js"></script>
+  <script src="/scripts/lightbox.js?v=2"></script>
   <link rel="import" href="/static.html">
 
 </head>
@@ -53,6 +53,9 @@
           <div class="column">
             <img src="/image/oldWizard_sm.jpg" onclick="openModal();currentSlide(9)" class="hover-shadow">
           </div>
+		  <div class="column">
+            <img src="/image/SchoolGirl_sm.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow">
+          </div>
         </div>
 
         <div id="myModal" class="modal">
@@ -64,40 +67,44 @@
             </div>
 
             <div class="mySlides">
-              <img class="Test" src="/image/forest_lg.jpg" alt="1 / 9">
+              <img class="Test" src="/image/forest_lg.jpg" alt="1 / 10">
             </div>
 
             <div class="mySlides">
-              <img class="Test" src="/image/kassandra_lg.jpg" alt="2 / 9">
+              <img class="Test" src="/image/kassandra_lg.jpg" alt="2 / 10">
             </div>
 
             <div id="tallimg" class="mySlides">
-              <img class="Test" src="/image/girl_lg.jpg" alt="3 / 9">
+              <img class="Test" src="/image/girl_lg.jpg" alt="3 / 10">
             </div>
 
             <div class="mySlides">
-              <img class="Test" src="/image/BFChar.jpg" alt="4 / 9">
+              <img class="Test" src="/image/BFChar.jpg" alt="4 / 10">
             </div>
 
             <div class="mySlides">
-              <img class="Test" src="/image/eating_lg.jpg" alt="5 / 9">
+              <img class="Test" src="/image/eating_lg.jpg" alt="5 / 10">
             </div>
 
             <div class="mySlides">
-              <img class="Test" src="/image/horse_lg.jpg" alt="6 / 9">
+              <img class="Test" src="/image/horse_lg.jpg" alt="6 / 10">
             </div>
 
             <div class="mySlides">
-              <img class="Test" src="/image/expressions_lg.jpg" alt="7 / 9">
+              <img class="Test" src="/image/expressions_lg.jpg" alt="7 / 10">
             </div>
 
             <div class="mySlides">
-              <img class="Test" src="/image/danielpose_lg.jpg" alt="8 / 9">
+              <img class="Test" src="/image/danielpose_lg.jpg" alt="8 / 10">
             </div>
 
             <div class="mySlides">
-              <img class="Test" src="/image/oldWizard_lg.jpg" alt="9 / 9">
+              <img class="Test" src="/image/oldWizard_lg.jpg" alt="9 / 10">
             </div>
+
+			<div class="mySlides">
+				<img class="Test" src="/image/SchoolGirl_lg.jpg" alt="10 / 10">
+			</div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
